# mcp-crawl4ai-rag

./: .dockerignore  .env.example  .env.old  .env.ollama  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  Dockerfile.prod  IMPLEMENTATION_SUMMARY.md  README.md  build-and-push.bat  build-and-push.sh  build-ollama.bat  build.bat  check-containers.bat  docker-compose.ollama.yml  docker-compose.published.yml  docker-compose.yml  env.example  example_config_usage.py  implementation-plan.md  init-schema.sh  lint.py  mcp-container-logs.txt  pyproject.toml  quick-start.sh  setup-env.ps1  shotgun_context_dev.txt  start-mcp-with-standalone-ollama.bat  start-mcp.bat  start-published.bat  start-published.sh  start.bat  test-health.bat  test-parse-repo.bat  test-parse-repo.py  test_fallback.py  test_providers.py
Qwen3-Embedding/: .dockerignore  Dockerfile  README.md  docker-compose.yml  start.sh
Qwen3-Embedding/config/: models.yaml
batch_crawler/: README.md  README_FIXED.md  batch_crawler.py  batch_crawler_docker.py  batch_crawler_fixed.py  batch_crawler_http.py  batch_crawler_mcp.py  batch_crawler_simple.py  batch_crawler_working.py  batch_crawler_working_fixed.py  cleanup.bat  cleanup.sh  example_urls.txt  requirements.txt  run_docker.bat  run_simple.bat  run_simple.sh  run_working.bat  run_working.sh  setup.bat  setup.sh  sitemap_urls-anthropic.txt  sitemap_urls.txt  start.bat  start.sh  start_http.bat  test_encoding.bat  test_mcp_connection.py
knowledge_graphs/: test_script.py
scripts/: setup-ollama-models.sh
src/: config.py  crawl4ai_mcp.py  utils.py  utils.py.backup
tests/: __init__.py  conftest.py  test_utils.py
(+22 files in other folders)
